--- a/whatscyber/Dockerfile
+++ b/whatscyber/Dockerfile
@@ -1,6 +1,6 @@
 FROM cyberuserbot/whatscyber:latest
 
-RUN git clone https://github.com/FaridDadashzade/WhatsCyber
+RUN git clone https://github.com/FaridDadashzade/WhatsCyber /root/WhatsCyber
 WORKDIR /root/WhatsCyber/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
