--- a/whatscyber/Dockerfile
+++ b/whatscyber/Dockerfile
@@ -2,7 +2,7 @@ FROM cyberuserbot/whatscyber:latest
 
 RUN git clone https://github.com/FaridDadashzade/WhatsCyber /root/WhatsCyber
 WORKDIR /root/WhatsCyber/
-ENV TZ=Europe/Istanbul
+ENV TZ=Asia/Baku
 RUN npm install supervisor -g
 RUN yarn install --no-audit
 
