--- a/example.env
+++ b/example.env
@@ -15,8 +15,7 @@ FULL_EVA="false"
 BLOCK_MESSAGE="default"
 UNBLOCK_MESSAGE="default"
 UNMUTE_MESSAGE="default"
-WORK_TYPE="private" # private - public 
-# *Kid* worktype will be usable soon..
+WORK_TYPE="private" 
 PROMOTE_MESSAGE="default"
 DEMOTE_MESSAGE="default"
 BAN_MESSAGE="default"
@@ -24,9 +23,9 @@ AFK_MESSAGE="default"
 HANDLERS="^[.!;]"
 SEND_READ=false
 HEROKU=false
-HEROKU_API_KEY="" # Replace with your Heroku API key
-HEROKU_APP_NAME="" # Replace with your Heroku app name
-REMOVE_BG_API_KEY=false # Replace with your remove bg API key "key"
-DEEPAI_API_KEY=false # Replace with your DeepAI API key "key"
+HEROKU_API_KEY="" 
+HEROKU_APP_NAME=""
+REMOVE_BG_API_KEY=false 
+DEEPAI_API_KEY=false
 NO_ONLINE=true
 SUDO=false
