--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "WhatsCyber",
     "description": "WhatsCyber project - Makes it easy and fun to use Whatsapp. World’s first UserBot made for WhatsApp.",
-    "logo": "https://i.hizliresim.com/6Bbj7i.jpg",
+    "logo": "https://telegra.ph/file/c14faa46af2d062ea308d.jpg",
     "keywords": ["whatsapp", "userbot", "WhatsCyber", "WhatsCyber", "bot", "api", "ai", "WhatsCyber", "ai-bot", "WhatsCyber", "wabot", "wabot WhatsCyber", "wp bot"],
     "repository": "https://github.com/FaridDadashzade/WhatsCyber",
     "website":   "https://t.me/WhatsCyber",
